--- a/Template_Language/requirements.txt
+++ b/Template_Language/requirements.txt
@@ -1,1 +1,33 @@
+bleach==5.0.0
+build==0.7.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+check-manifest==0.48
+commonmark==0.9.1
+cryptography==37.0.2
+docutils==0.18.1
+idna==3.3
+importlib-metadata==4.11.3
+jeepney==0.8.0
+keyring==23.5.0
+packaging==21.3
+pep517==0.12.0
+pkginfo==1.8.2
 ply==3.11
+pycparser==2.21
+Pygments==2.12.0
+pyparsing==3.0.9
+readme-renderer==35.0
+requests==2.27.1
+requests-toolbelt==0.9.1
+rfc3986==2.0.0
+rich==12.4.1
+SecretStorage==3.3.2
+six==1.16.0
+-e git+ssh://git@github.com/Nellkam/Language-Processing.git@b95b76ddbc1cabeb6dba171afc6b6c9b27b3312f#egg=templo&subdirectory=Template_Language
+tomli==2.0.1
+twine==4.0.0
+urllib3==1.26.9
+webencodings==0.5.1
+zipp==3.8.0
